<resources>
    <string name="app_name">Binar Video Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">GET STARTED</string>
    <string name="submit">Submit</string>
    <string name="main_snackbar_greeting">Welcome, %s</string>
    <string name="main_snackbar_dismiss">Close</string>
    <string name="addnewsong_error_title">Title must be filled</string>
    <string name="addnewsong_error_singer">Singer Name must be filled</string>
    <string name="addnewsong_error_icon">Icon URL must be filled</string>
    <string name="addnewsong_error_video">Video URL must be filled</string>
    <string name="addnewsong_toast_success">Save song to playlist Success!</string>
    <string name="addnewsong_toast_failed">Saving Playlist Failed!, Please Try Again</string>
    <string name="addnewsong_header_edit">Edit Playlist</string>
    <string name="addnewsong_header_add">Add Playlist</string>
    <string name="addnewsong_toast_cancel">Adding new song cancelled</string>
    <string name="main_message_empty">No Data</string>
    <string name="main_toast_failed_fetch">Get Data Failed</string>
    <string name="main_toast_failed_delete">Delete Data Failed</string>
    <string name="intro_snackbar_name">Please fill your name</string>
    <string name="main_playlist">Playlist</string>
    <string name="main_favorite">Favorite</string>
    <string name="player_snackbar_favorite_true">Video Favorited</string>
    <string name="player_snackbar_favorite_false">Video Unfavorited</string>
    <string name="player_toast_favorite_failed">Failed to change favorite status</string>
    <string name="addnewsong_hint_title">Song Title</string>
    <string name="addnewsong_hint_singer">Singer Name</string>
    <string name="addnewsong_hint_icon">Icon URL</string>
    <string name="addnewsong_hint_video">Youtube URL</string>
    <string name="addnewsong_btn_add">ADD</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_back">BACK</string>
    <string name="intro_next">NEXT</string>
    <string name="addnewsong_btn_edit">edit</string>
    <string name="addnewsong_dialog_edit">Are You Sure you Want To Edit This Song?</string>

    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_create_account">Dont have account? Sign Up here</string>
    <string name="error_email_empty">Email Should be Filled</string>
    <string name="error_email_invalid">Email is Invalid</string>
    <string name="error_password_empty">Password Should be Filled</string>
    <string name="text_login_success">Login Success !</string>
    <string name="text_btn_signup">SIGN UP</string>
    <string name="text_hint_username">Username</string>
    <string name="text_title_toolbar_register">Register Account</string>
    <string name="text_title_toolbar_login">Login</string>
    <string name="error_username_empty">Username Should be Filled</string>
    <string name="text_register_success">Register Success!</string>
</resources>