<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".ui.addnewsong.AddNewSongActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/black"
        app:titleTextColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/addnewsong_hint_title"
        android:textColorHint="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_song">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:fontFamily="@font/bebas_neue_regular"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/shape1"
        android:layout_width="400dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/bg_rectangle_green"
        app:layout_constraintLeft_toLeftOf="@id/til_title_song"
        app:layout_constraintRight_toRightOf="@id/til_title_song"
        app:layout_constraintTop_toBottomOf="@id/til_title_song" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_singer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addnewsong_hint_singer"
        android:textColorHint="@color/green"
        app:layout_constraintBottom_toTopOf="@id/shape2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_singer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:fontFamily="@font/bebas_neue_regular"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/shape2"
        android:layout_width="400dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/bg_rectangle_green"
        app:layout_constraintLeft_toLeftOf="@id/til_singer_name"
        app:layout_constraintRight_toRightOf="@id/til_singer_name"
        app:layout_constraintTop_toBottomOf="@id/til_singer_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_icon_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addnewsong_hint_icon"
        android:textColorHint="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_icon_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:fontFamily="@font/bebas_neue_regular"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/shape3"
        android:layout_width="400dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/bg_rectangle_green"
        app:layout_constraintLeft_toLeftOf="@id/til_icon_url"
        app:layout_constraintRight_toRightOf="@id/til_icon_url"
        app:layout_constraintTop_toBottomOf="@id/til_icon_url" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_video_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addnewsong_hint_video"
        android:textColorHint="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_video_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:fontFamily="@font/bebas_neue_regular"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/shape4"
        android:layout_width="400dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/bg_rectangle_green"
        app:layout_constraintLeft_toLeftOf="@id/til_video_url"
        app:layout_constraintRight_toRightOf="@id/til_video_url"
        app:layout_constraintTop_toBottomOf="@id/til_video_url" />

    <Button
        android:id="@+id/btn_add_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bebas_neue_regular"
        android:text="@string/addnewsong_btn_add"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_video_url" />


</androidx.constraintlayout.widget.ConstraintLayout>